--- a/.github/workflows/daily_scrape.yml
+++ b/.github/workflows/daily_scrape.yml
@@ -38,43 +38,22 @@ jobs:
       run: |
         sudo timedatectl set-timezone Asia/Kuala_Lumpur
         
-    - name: Set up Chrome and ChromeDriver
+    - name: Install Chromium and ChromeDriver
       run: |
-        # First, download and add the Google Chrome repository key
-        wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-        
-        # Create the Google Chrome repository configuration
-        # Note: Using the correct path /etc/apt/sources.list.d/ instead of /etc/sources.list.d/
-        sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
-        
-        # Update package lists to include Google Chrome repository
+        # Update package lists
         sudo apt-get update
         
-        # Install Google Chrome stable version
-        sudo apt-get install -y google-chrome-stable
-        
-        # Get the major version of installed Chrome
-        CHROME_VERSION=$(google-chrome --version | cut -d ' ' -f 3 | cut -d '.' -f 1)
-        echo "Chrome version: ${CHROME_VERSION}"
-        
-        # Download matching ChromeDriver version
-        CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION}")
-        echo "ChromeDriver version: ${CHROMEDRIVER_VERSION}"
-        
-        # Download and install ChromeDriver
-        wget -q "https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
-        unzip chromedriver_linux64.zip
-        sudo mv chromedriver /usr/local/bin/
-        sudo chmod +x /usr/local/bin/chromedriver
-        
-        # Clean up downloaded files
-        rm chromedriver_linux64.zip
+        # Install Chromium and ChromeDriver from Ubuntu repositories
+        sudo apt-get install -y chromium-browser chromium-chromedriver
         
         # Verify installations
-        echo "Installed Chrome version:"
-        google-chrome --version
+        echo "Installed Chromium version:"
+        chromium-browser --version
         echo "Installed ChromeDriver version:"
         chromedriver --version
+        
+        # Set browser binary location for Selenium
+        echo "CHROME_BINARY_PATH=/usr/bin/chromium-browser" >> $GITHUB_ENV
         
     - name: Install Python dependencies
       run: |
