--- a/.github/workflows/daily_scrape.yml
+++ b/.github/workflows/daily_scrape.yml
@@ -2,7 +2,7 @@ name: Daily Loyverse Scraping
 
 on:
   schedule:
-    - cron: '0 0 * * *'   # 12:00 PM MYT
+    - cron: '0 0 * * *'   # 08:00 AM MYT
   workflow_dispatch:      # Allows manual triggering from GitHub interface
 
 jobs:
